# rocket-api

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
app/: Cargo.toml  diesel.toml
app/migrations/2022-04-04-210415_create_rustaceans/: up.sql
app/src/: controllers.rs  main.rs  router.rs  storage.rs
app/src/auth/: basic_auth.rs
app/src/controllers/: rustaceans_controller.rs
app/src/router/: catchers.rs  rustacean_routes.rs
app/src/storage/: rustaceans_model.rs  rustaceans_schema.rs
docker/: development.Dockerfile
